REST API: support clustering in host endpoints
